# pspsdk-cmake

./: CMakeLists.txt  README.md
cmake/: pspsdkConfig.cmake
demos/cube/: CMakeLists.txt
demos/cube/src/: cube.c
demos/kprint/: CMakeLists.txt
demos/kprint/src/: main.c
